--- a/css/reglas.css
+++ b/css/reglas.css
@@ -1,12 +1,24 @@
-@media screen and (max-width: 768px) {
-    .container {
-      width: 95%;
-    }
-    .tarjeta {
-      padding: 1rem;
-    }
-    .titulo-seccion {
-      font-size: 1.5rem;
-    }
+@media (max-width: 768px) {
+  .navbar-nav {
+    font-size: 0.9rem;
+    flex-direction: column;
+    align-items: center;
   }
-  
+
+  .nav-item {
+    margin: 0.5rem 0;
+  }
+
+  .nav-item .nav-link {
+    color: #e8d8c8; /* beige para móviles */
+
+  }
+
+  .nav-item .nav-link:hover {
+    color: #f0e9dc; /* hover claro si tenés uno específico */
+  }
+
+  .nav-item .nav-link::after {
+    background-color: #f0e9dc;
+  }
+}
