--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,6 @@ variables
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  scroll-behavior: smooth;
 }
 
 body {
@@ -38,51 +37,40 @@ img {
 /* ----------------------------------------------
                    header
 ---------------------------------------------- */
-header {
-  position: relative;
-  z-index: 1;
-  background-color: transparent;
-  padding-top: 20px;
-  transition: background-color 0.4s ease;
-  box-shadow: none;
-}
-header.activo {
-  background-color: #2271c1; /*?*/
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
-}
-header .navbar {
+.navbar {
   position: relative;
   z-index: 2;
   background-color: transparent;
   padding: 1.5rem 0;
   transition: all 0.3s ease;
 }
-header .navbar .navbar-brand img {
-  max-height: 45px;
+.navbar .navbar-brand img {
+  margin-top: 10px;
+  max-height: 50px;
   transition: transform 0.3s ease;
 }
-header .navbar .navbar-brand img:hover {
+.navbar .navbar-brand img:hover {
   transform: scale(1.05);
 }
-header .navbar .navbar-toggler {
+.navbar .navbar-toggler {
   border: none;
   background: none;
 }
-header .navbar .navbar-toggler i {
+.navbar .navbar-toggler i {
   color: #e8d8c8;
   font-size: 1.8rem;
   transition: transform 0.3s ease;
 }
-header .navbar .navbar-toggler i:hover {
+.navbar .navbar-toggler i:hover {
   transform: rotate(90deg);
   color: #e8d8c8; /*hamburgesa*/
 }
-header .navbar .navbar-nav {
+.navbar .navbar-nav {
   display: flex;
   justify-content: center;
   width: 100%;
 }
-header .navbar .navbar-nav .nav-item .nav-link {
+.navbar .navbar-nav .nav-item .nav-link {
   font-weight: 400;
   color: #00644b;
   font-size: 1rem;
@@ -91,7 +79,7 @@ header .navbar .navbar-nav .nav-item .nav-link {
   position: relative;
   transition: all 0.3s ease;
 }
-header .navbar .navbar-nav .nav-item .nav-link::after {
+.navbar .navbar-nav .nav-item .nav-link::after {
   content: "";
   display: block;
   width: 0%;
@@ -100,10 +88,10 @@ header .navbar .navbar-nav .nav-item .nav-link::after {
   transition: width 0.3s ease;
   margin-top: 0.2rem;
 }
-header .navbar .navbar-nav .nav-item .nav-link:hover {
+.navbar .navbar-nav .nav-item .nav-link:hover {
   color: #001e06;
 }
-header .navbar .navbar-nav .nav-item .nav-link:hover::after {
+.navbar .navbar-nav .nav-item .nav-link:hover::after {
   width: 100%;
 }
 
@@ -126,6 +114,12 @@ header .navbar .navbar-nav .nav-item .nav-link:hover::after {
   }
   .navbar-nav .nav-item .nav-link::after:hover::after {
     width: 100%;
+  }
+}
+@media (max-width: 768px) {
+  .navbar-collapse.show {
+    background-color: #122c1f;
+    padding: 1rem;
   }
 }
 .clip-header {
@@ -180,6 +174,41 @@ header .navbar .navbar-nav .nav-item .nav-link:hover::after {
   color: #e8d8c8;
   text-align: center;
   margin-bottom: 2rem;
+}
+
+/*-----------------------------------------------
+inicio 1
+-----------------------------------------------*/
+.bannerparallax {
+  display: flex;
+  align-items: center;
+  position: relative;
+  background-attachment: fixed;
+  background-size: cover;
+  /*control altura del banner*/
+  height: 100vh;
+  background-position: center;
+  background-image: url("../img/banner.jpg");
+  background-blend-mode: multiply;
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.4);
+}
+
+.introduccion {
+  background-color: #122c1f;
+  color: #00644b;
+}
+.introduccion h2 {
+  color: #e8d8c8;
+  margin-bottom: 1rem;
+}
+.introduccion p {
+  font-size: 1.1rem;
+  color: #e8e8e8;
+}
+
+.carousel-fotos img {
+  border-radius: 1rem;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
 }
 
 /* ----------------------------------------------
@@ -300,4 +329,28 @@ header .navbar .navbar-nav .nav-item .nav-link:hover::after {
           clip-path: circle(40% at 50% 50%);
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+/*----------------------------------------------
+                footer
+----------------------------------------------*/
+.clip-footer {
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.footer-custom {
+  position: relative;
+  overflow: hidden;
+}
+.footer-custom .footer-texto {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  padding-top: 1.5rem;
+  z-index: 2;
+  color: #e8d8c8;
+  font-family: "DM Sans", sans-serif;
 }/*# sourceMappingURL=index.css.map */
