--- a/css/index.scss
+++ b/css/index.scss
@@ -9,7 +9,7 @@ $color-hover: #001e06;
 $color-hover-claro: #fff;
 $color-texto: #00644b; //color encima de beige
 $color-textop: #e8d8c8; //textos principales #2b8514
-$color-suave: #848478; //textos secundarios o íconos
+$color-suave: #e8e8e8; //textos secundarios o íconos
 $color-claro: #797c74; //fondo alternativo o detalles sutiles
 
 $fuente-base: "DM Sans", sans-serif;
@@ -24,7 +24,6 @@ $sombra-suave: 0 4px 15px rgba(0, 0, 0, 0.08);
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  scroll-behavior: smooth;
 }
 
 body {
@@ -55,20 +54,6 @@ img {
                    header
 ---------------------------------------------- */
 
-
-header {
-  position: relative;
-  z-index: 1;
-  background-color: transparent;
-  padding-top: 20px;
-  transition: background-color 0.4s ease;
-  box-shadow: none;
-
-  &.activo {
-    background-color: #2271c1; /*?*/
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
-  }
-
   .navbar {
     position: relative;
     z-index: 2;
@@ -77,7 +62,8 @@ header {
     transition: all 0.3s ease;
 
     .navbar-brand img {
-      max-height: 45px;
+      margin-top: 10px;
+      max-height: 50px;
       transition: transform 0.3s ease;
 
       &:hover {
@@ -135,7 +121,7 @@ header {
       }
     }
   }
-}
+
 
 /*importantisimo*/
 
@@ -160,6 +146,14 @@ header {
     }
   }
 }
+
+@media (max-width: 768px) {
+  .navbar-collapse.show {
+    background-color: $color-fondo;
+    padding: 1rem;
+  }
+}
+
 
 
 .clip-header {
@@ -223,6 +217,51 @@ header {
   text-align: center;
   margin-bottom: 2rem;
 }
+
+
+
+/*-----------------------------------------------
+inicio 1
+-----------------------------------------------*/
+
+.bannerparallax {
+  display: flex;
+  align-items: center;
+  position: relative;
+  background-attachment: fixed;
+  background-size: cover;
+  /*control altura del banner*/
+  height: calc(100vh);
+  background-position: center;
+  background-image: url('../img/banner.jpg');
+  background-blend-mode: multiply;
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.4);
+}
+
+
+.introduccion {
+  background-color: $color-fondo;
+  color: $color-texto;
+
+  h2 {
+    color: $color-textop;
+    margin-bottom: 1rem;
+  }
+
+  p {
+    font-size: 1.1rem;
+    color: $color-suave;
+  }
+}
+
+.carousel-fotos {
+  img {
+    border-radius: 1rem;
+    box-shadow: $sombra-suave;
+    
+  }
+}
+
 
 /* ----------------------------------------------
                 componentes
@@ -347,4 +386,31 @@ header {
 .img-clippath {
   clip-path: circle(40% at 50% 50%);
   object-fit: cover;
+}
+
+/*----------------------------------------------
+                footer
+----------------------------------------------*/
+
+.clip-footer {
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.footer-custom {
+  position: relative;
+  overflow: hidden;
+
+
+  .footer-texto {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    padding-top: 1.5rem;
+    z-index: 2;
+    color: $color-textop; // o el color que estés usando
+    font-family: $fuente-base;
+  }
 }
