--- a/css/index.css
+++ b/css/index.css
@@ -214,6 +214,10 @@ inicio 1
 /* ----------------------------------------------
                 componentes
 ---------------------------------------------- */
+.servicios {
+  margin-top: 20%;
+}
+
 /* tarjetas informativas */
 .tarjeta {
   background-color: #797c74;
@@ -267,41 +271,6 @@ inicio 1
   transition: all 0.3s ease;
 }
 
-/* Banner video */
-.banner-video {
-  position: relative;
-  height: 100vh;
-  overflow: hidden;
-}
-.banner-video .video-container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-.banner-video .video-container video {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-.banner-video .video-container .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.4);
-  padding: 2rem;
-}
-.banner-video .video-container .overlay h1 {
-  color: #e8d8c8;
-  font-weight: 700;
-}
-.banner-video .video-container .overlay p {
-  color: #e8d8c8;
-  font-size: 1.2rem;
-}
-
 /* Carousel seccion */
 .carousel-item img {
   border-radius: 1rem;
@@ -345,10 +314,7 @@ inicio 1
   overflow: hidden;
 }
 .footer-custom .footer-texto {
-  position: absolute;
   top: 0;
-  left: 50%;
-  transform: translateX(-50%);
   padding-top: 1.5rem;
   z-index: 2;
   color: #e8d8c8;
