--- a/css/index.scss
+++ b/css/index.scss
@@ -267,6 +267,9 @@ inicio 1
                 componentes
 ---------------------------------------------- */
 
+.servicios {
+  margin-top: 20%;
+}
 /* tarjetas informativas */
 .tarjeta {
   background-color: $color-claro;
@@ -324,45 +327,6 @@ inicio 1
 }
 
 
-/* Banner video */
-.banner-video {
-  position: relative;
-  height: 100vh;
-  overflow: hidden;
-
-  .video-container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-
-    video {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
-    .overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.4);
-      padding: 2rem;
-
-      h1 {
-        color: $color-textop;
-        font-weight: 700;
-      }
-
-      p {
-        color: $color-textop;
-        font-size: 1.2rem;
-      }
-    }
-  }
-}
-
 /* Carousel seccion */
 .carousel-item img {
   border-radius: 1rem;
@@ -404,13 +368,10 @@ inicio 1
 
 
   .footer-texto {
-    position: absolute;
     top: 0;
-    left: 50%;
-    transform: translateX(-50%);
     padding-top: 1.5rem;
     z-index: 2;
-    color: $color-textop; // o el color que estés usando
+    color: $color-textop; 
     font-family: $fuente-base;
   }
 }
