--- a/css/index.css
+++ b/css/index.css
@@ -216,6 +216,10 @@ inicio 1
      object-fit: cover;
 }
 
+#galeria .carousel-fotos {
+  border-radius: 1.5rem;
+}
+
 /* ----------------------------------------------
                 componentes
 ---------------------------------------------- */
@@ -359,6 +363,29 @@ a {
     margin-bottom: 40px;
   }
 }
+/*---------------------------------------------
+              iconos
+----------------------------------------------*/
+.icono-red {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #1e2c14;
+  border: 2px solid #e8d8c8;
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  font-size: 2.5rem;
+  color: #e8d8c8;
+  transition: all 0.3s ease-in-out;
+}
+
+.icono-red:hover {
+  background-color: #00644b;
+  color: #fff;
+  transform: scale(1.1);
+}
+
 /* ----------------------------------------------
                  clip-path
 ---------------------------------------------- */
@@ -391,6 +418,12 @@ a {
   height: 240px;
 }
 
+.tres {
+  -webkit-clip-path: polygon(22.3% 7.8%, 78.6% 7.5%, 73.6% 100%, 13.2% 100%);
+          clip-path: polygon(22.3% 7.8%, 78.6% 7.5%, 73.6% 100%, 13.2% 100%);
+  height: 580px;
+}
+
 /*----------------------------------------------
                 footer
 ----------------------------------------------*/
@@ -406,7 +439,7 @@ a {
 }
 .footer-custom .footer-texto {
   top: 0;
-  padding-top: 1.5rem;
+  padding-top: 2.5rem;
   z-index: 2;
   color: #e8d8c8;
   font-family: "DM Sans", sans-serif;
