--- a/css/index.scss
+++ b/css/index.scss
@@ -267,6 +267,11 @@ inicio 1
   
 }
 
+#galeria{
+  .carousel-fotos{
+    border-radius: 1.5rem;
+  }
+}
 
 
 /* ----------------------------------------------
@@ -427,6 +432,28 @@ a {
   }
 }
 
+/*---------------------------------------------
+              iconos
+----------------------------------------------*/
+.icono-red {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $color-secundario;
+  border: 2px solid $color-textop;
+  border-radius: 50%;
+  width: 80px;              
+  height: 80px;             
+  font-size: 2.5rem;   
+  color: $color-textop;
+  transition: all 0.3s ease-in-out;
+}
+
+.icono-red:hover {
+  background-color: $color-texto;
+  color: #fff;
+  transform: scale(1.1);
+}
 /* ----------------------------------------------
                  clip-path
 ---------------------------------------------- */
@@ -455,6 +482,11 @@ a {
   height: 240px;
 }
 
+.tres {
+  clip-path: polygon(22.3% 7.8%, 78.6% 7.5%, 73.6% 100%, 13.2% 100%);
+  height: 580px;
+}
+
 /*----------------------------------------------
                 footer
 ----------------------------------------------*/
@@ -472,7 +504,7 @@ a {
 
   .footer-texto {
     top: 0;
-    padding-top: 1.5rem;
+    padding-top: 2.5rem;
     z-index: 2;
     color: $color-textop; 
     font-family: $fuente-base;
