--- a/css/reglas.css
+++ b/css/reglas.css
@@ -63,3 +63,13 @@
   /*box-shadow: -2px 3px 7px 1px cyan;*/
   box-shadow: rgba(127, 197, 207, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.5) 0px 30px 60px -30px;
 }
+
+
+.footer-custom {
+  @media (min-width: 992px) {
+    .footer-texto {
+      margin-bottom: -150px;
+
+    }
+  }
+}
